# robot_simulation_with_llm_gpt2_reinforcement_learning

./: README.md
install/: local_setup.sh  setup.sh
install/robot/lib/robot/: gazebo_spawn  robot_node
install/robot/share/ament_index/resource_index/package_run_dependencies/: robot
install/robot/share/ament_index/resource_index/parent_prefix_path/: robot
install/robot/share/robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot/share/robot/cmake/: robotConfig-version.cmake  robotConfig.cmake
install/robot/share/robot/environment/: ament_prefix_path.dsv  path.dsv
install/robot/share/robot/launch/: robot_launch.cpp
install/robot/share/robot/urdf/: robot.urdf
log/: latest_build  latest_list
src/robot/: CMakeLists.txt
src/robot/include/robot/: robot_node.hpp  urdf_parser.hpp
src/robot/launch/: robot_launch.cpp
src/robot/src/: gazebo_spawn.cpp  robot_node.cpp  urdf_parser.cpp
src/robot/urdf/: robot.urdf
